# LeNet-5-Architecture-Implementation

./: README.md  lenet5.ipynb  lenet5_mnist.pth  main.py  pyproject.toml
