[project]
name = "lenet"
version = "0.1.0"
description = "LeNet-5 Implementation with PyTorch"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "sympy>=1.14.0",
    "torch>=2.4.0",
    "torchvision>=0.19.0",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
